fixing API Search
